--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,11 @@
   "scripts": {
     "dev": "vite --config ./config/vite.config.dev.ts",
     "build": "vue-tsc --noEmit && vite build --config ./config/vite.config.prod.ts",
-    "build:notsc": "vite build --config ./config/vite.config.prod.ts",
     "report": "cross-env REPORT=true npm run build",
     "preview": "npm run build && vite preview --host",
     "type:check": "vue-tsc --noEmit --skipLibCheck",
-    "lint-staged": "npx lint-staged"
+    "lint-staged": "npx lint-staged",
+    "prebuild": "npm run type:check && npm run lint-staged"
   },
   "lint-staged": {
     "*.{js,ts,jsx,tsx}": [
