--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,33 +10,11 @@
     "build": "vue-tsc --noEmit && vite build --config ./config/vite.config.prod.ts",
     "report": "cross-env REPORT=true npm run build",
     "preview": "npm run build && vite preview --host",
-    "type:check": "vue-tsc --noEmit --skipLibCheck",
-    "lint-staged": "npx lint-staged",
-    "prebuild": "npm run type:check && npm run lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,ts,jsx,tsx}": [
-      "prettier --write",
-      "eslint --fix"
-    ],
-    "*.vue": [
-      "stylelint --fix",
-      "prettier --write",
-      "eslint --fix"
-    ],
-    "*.{less,css}": [
-      "stylelint --fix",
-      "prettier --write"
-    ]
+    "type:check": "vue-tsc --noEmit --skipLibCheck"
   },
   "dependencies": {
     "@arco-design/web-vue": "^2.50.2",
     "@arco-themes/vue-powerx-design-default": "^0.0.2",
-    "@fullcalendar/core": "^6.1.6",
-    "@fullcalendar/daygrid": "^6.1.6",
-    "@fullcalendar/interaction": "^6.1.6",
-    "@fullcalendar/timegrid": "^6.1.6",
-    "@fullcalendar/vue3": "^6.1.6",
     "@vue/component-compiler-utils": "^3.3.0",
     "@vueuse/core": "^9.3.0",
     "axios": "^0.24.0",
@@ -53,7 +31,6 @@
     "vue-i18n": "^9.2.2",
     "vue-qr": "^4.0.9",
     "vue-router": "^4.0.14",
-    "vue-template-compiler": "^2.7.14",
     "wujie-vue3": "^1.0.18"
   },
   "devDependencies": {
@@ -61,7 +38,6 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@types/lodash": "^4.14.186",
-    "@types/mockjs": "^1.0.7",
     "@types/nprogress": "^0.2.0",
     "@types/sortablejs": "^1.15.0",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
@@ -80,7 +56,6 @@
     "eslint-plugin-vue": "^9.6.0",
     "less": "^4.1.3",
     "lint-staged": "^13.0.3",
-    "mockjs": "^1.1.0",
     "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
     "rollup": "^3.9.1",
